corrected signin/signup alignment on for mobile devices

--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -137,6 +137,7 @@
   .content {
     align-items: center;
     width: 100%;
+    margin-left: 0px;
   }
 
   .inputContainer {
